# PyRestic

./: .gitignore  README.md  backup.bat  backup.sh  config.yml  install.bat  install.sh  pyproject.toml  restore.bat  restore.sh  setup.cfg  startBackup.bat
src/: patterns_examples.txt  restic.py  resticUsage.txt
src/libs/: CmdRunner.py  CmdRunner_Terminal.py  Configuration.py  GitHub.py  OSDetector.py  Profiles.py  TerminalColors.py  WinTools.py
