# Usage: 
#   Normal Install: pip install -e .
#   Build: python -m build
# be sure setuptools and build are in latest version
# pip install --upgrade setuptools build

[project]
name = "restic-wrapper"
version = "1.0.0"
authors = [
    {name = "Mag. Stefan Hagmann"},
]
description = ""
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
requires-python = ">=3.8"
dependencies = [
    'wheel',
    'setuptools',
    'build',
    'pyyaml',
    'click',
    'questionary',
    'requests',
    'typing',
    'tqdm',
    'pywin32',
    'winshell',    
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"